@@ -1,5 +1,10 @@
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_image_win.c: Don't show resize grip of status bar.
+	* src/gimv_thumb_win.c: Don't bind accel keys to summary mode menu.
+
+2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_elist.h, src/gimv_cell_pixmap.c, src/gimv_cell_pixmap.h,
 	  src/gimv_nav_win.h, src/gimv_image_view.h, src/gimv_image_win.h,
 	  src/gimv_dlist.c, src/gimv_dlist.h, src/gimv_scrolled.c,
